# rori_linux_client

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
scripts/: alarm.py  music.py  open_news.sh  stt.py
src/: main.rs  sharedprop.rs
src/rori/: api.rs  endpoint.rs  mod.rs
ui/: rori.qml
