[package]
name = "rori_linux_client"
version = "0.1.0"
authors = ["Sébastien Blin <contact@enconn.fr>"]

[dependencies]
dbus = "0.6.1" # requirements libdbus
env_logger = "0.5.6"
log = "0.4.1"
qmlrs = "0.1.1"
reqwest = "0.9.8"
serde = "1.0.34"
serde_derive = "1.0.34"
serde_json = "1.0.13"
time = "0.1"
# For the API, will be removed in the future
bodyparser = "0.8.0"
iron = "0.6.0"
router = "0.6.0"